# gb688_downloader

./: .gitignore  README.md  api.py  api.spec  command.py  gb_downloader.py  gui.py  main.py  pyproject.toml  requirements.txt  std_cli.py  utils.py
standard/: GB.py  HDB.py  NatureStandard.py  __init__.py  client.py  config.py  db_download.py  errors.py  gb_download.py  models.py  utils.py
