[tool.poetry]
name = "gb688_downloader"
version = "0.1.0"
description = ""
authors = ["renmu123 <19961017fyx>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
tenacity = "^6.2.0"
beautifulsoup4 = "^4.9.3"
PyPDF4 = "^1.27.0"
tqdm = "^4.51.0"
cleo = "^0.8.1"
PrettyTable = "^2.0.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
PyInstaller = "^4.0"

[[tool.poetry.source]]
name = "tuna"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

